# nocturna-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
nocturna_engine/: __init__.py
nocturna_engine/config/: __init__.py  default_config.yaml
nocturna_engine/core/: __init__.py  event_bus.py  event_contract.py
nocturna_engine/core/engine/: __init__.py  fingerprint_index.py  steps.py  summary.py
nocturna_engine/core/pipeline/: __init__.py  artifacts.py  runner.py  step.py  types.py
nocturna_engine/core/plugin_manager/: __init__.py
nocturna_engine/core/plugin_v2/: __init__.py  cache.py  docs.py  events.py  health.py  legacy_adapter.py  registry.py  reliability.py
nocturna_engine/core/security/: __init__.py
nocturna_engine/exceptions/: __init__.py  base_exceptions.py
nocturna_engine/interfaces/: __init__.py  base_analyzer.py  base_reporter.py  base_tool.py  base_tool_v2.py
nocturna_engine/interfaces/base_api_tool/: __init__.py  errors.py  models.py
nocturna_engine/interfaces/base_subprocess_tool/: __init__.py  constants.py  errors.py  models.py  output_limiter.py
nocturna_engine/models/: __init__.py  finding.py  scan_request.py  scan_result.py  target.py
nocturna_engine/normalization/: __init__.py  errors.py  metadata.py  severity.py
nocturna_engine/normalization/detector/: __init__.py  _api.py  _hints.py  _sniffers.py  _types.py
nocturna_engine/normalization/parsers/: __init__.py
nocturna_engine/normalization/pipeline/: __init__.py  config.py  dedup.py  result.py
nocturna_engine/normalization/registry/: __init__.py  _entry.py  _globals.py  _registry.py
nocturna_engine/services/: __init__.py  config_service.py  logging_service.py  secret_service.py
nocturna_engine/streaming/: __init__.py
nocturna_engine/streaming/jsonl_engine/: __init__.py  engine.py  errors.py  hooks.py  metrics.py  models.py  policies.py  utils.py
nocturna_engine/testing/: __init__.py  plugin_contract.py
nocturna_engine/utils/: __init__.py  async_helpers.py  validators.py
tests/: __init__.py  conftest.py
tests/core/engine/: test_engine.py  test_fingerprint_index.py  test_graceful_shutdown.py
tests/core/event_bus/: test_event_bus.py
tests/core/event_contract/: test_event_contract.py
tests/core/pipeline/: test_dag_runner.py  test_pipeline.py
tests/core/plugin_manager/: test_discovery.py  test_execution.py  test_isolation.py  (+1 more)
tests/exceptions/: test_base_exceptions.py
tests/models/: test_finding.py  test_scan_request.py  test_scan_result.py  test_target.py
tests/normalization/: test_detector.py  test_metadata.py  test_parser_base.py  test_parser_csv.py  test_parser_plaintext.py  test_parser_sarif_basic.py  test_parser_sarif_v2_features.py  test_parser_xml_nmap.py  test_pipeline_config.py  test_registry.py  test_severity.py
tests/services/: test_config_service.py  test_logging_service.py  test_secret_service.py
tests/testing/: test_plugin_contract.py
tests/utils/: test_async_helpers.py  test_retry_exceptions.py  test_validators.py
tests/v2/: test_ai_api_v2.py  test_contract_kit_v2.py  test_determinism_reliability_v2.py  test_egress_policy_v2.py  test_event_bridge_v2.py  test_health_policy_cache_v2.py  test_legacy_adapter_v2.py  test_registry_planner_v2.py  test_security_hardening_v2.py  test_setup_failure_trace_v2.py
(+252 files in other folders)
