[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nocturna-engine"
version = "0.1.0"
description = "Async-first modular orchestration core for security tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Muran-prog" }]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0,<3.0",
    "structlog>=24.0.0,<26.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-whois>=0.9.0,<1.0.0",
    "dnspython>=2.6.0,<3.0.0",
    "packaging>=24.0,<25.0",
    "defusedxml>=0.7.1,<1.0.0",
    "aiohttp>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]
sast = [
    "semgrep>=1.75.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nocturna_engine*"]

[tool.setuptools.package-data]
"nocturna_engine.config" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --import-mode=importlib"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line too long — handled by formatter
    "UP007",   # use X | Y — already used, but some legacy remains
    "SIM108",  # ternary — readability preference
    "RUF012",  # mutable class default — pydantic models use Field()
    "B008",    # function call in default — pydantic Field()
]

[tool.ruff.lint.isort]
known-first-party = ["nocturna_engine"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
reportUnannotatedClassAttribute = false
reportExplicitAny = false
reportAny = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportReturnType = "warning"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportUninitializedInstanceVariable = false
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportUnnecessaryComparison = "warning"
